[gd_scene load_steps=6 format=3 uid="uid://coxg0uh6kt3gu"]

[ext_resource type="Texture2D" uid="uid://214ubl51loa6" path="res://UI/Settings - Toggle Base.png" id="1_pe4nk"]
[ext_resource type="Script" uid="uid://d0woen01pujb2" path="res://server_button.gd" id="1_rv4f7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rv4f7"]
atlas = ExtResource("1_pe4nk")
region = Rect2(1, 9, 442, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr6uu"]
atlas = ExtResource("1_pe4nk")
region = Rect2(458, 10, 428, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyb1y"]
atlas = ExtResource("1_pe4nk")
region = Rect2(3, 83, 441, 75)

[node name="Control" type="Control"]
custom_minimum_size = Vector2(206, 75)
layout_mode = 3
anchors_preset = 0
offset_left = -205.0
offset_top = -41.0
offset_right = 207.0
offset_bottom = 34.0
script = ExtResource("1_rv4f7")

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(442, 75)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -50.5
offset_right = 217.0
offset_bottom = 24.5
scale = Vector2(1, 1.31)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_rv4f7")
texture_pressed = SubResource("AtlasTexture_lr6uu")
texture_hover = SubResource("AtlasTexture_lr6uu")
texture_disabled = SubResource("AtlasTexture_oyb1y")
ignore_texture_size = true
stretch_mode = 3

[node name="status" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = -25.0
offset_right = 193.0
offset_bottom = 21.0
mouse_filter = 2
bbcode_enabled = true
text = "[color=green]online
"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
threaded = true

[node name="count" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -25.0
offset_right = 97.0
offset_bottom = 21.0
mouse_filter = 2
bbcode_enabled = true
text = "[color=green]2/10
"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
threaded = true

[node name="name" type="RichTextLabel" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -30.0
offset_right = 55.0
offset_bottom = -7.0
scale = Vector2(1.265, 1.265)
mouse_filter = 2
bbcode_enabled = true
text = "[b]Navateen's server"
fit_content = true
scroll_active = false
threaded = true

[node name="type" type="RichTextLabel" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.534
anchor_right = 0.475
anchor_bottom = 0.534
offset_left = -183.775
offset_top = -7.55
offset_right = -47.775
offset_bottom = 15.45
scale = Vector2(1.265, 1.265)
mouse_filter = 2
bbcode_enabled = true
text = "[i]Parkour[/i]"
fit_content = true
scroll_active = false
threaded = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_http_request_completed"]
[connection signal="timeout" from="Timer" to="." method="ask_server"]
